Add RNG diagnostics to Buddhabrot mode
Show x/y balance, quadrant balance, serial correlation estimate,
accepted-orbit ratio and histogram symmetry score in the Buddhabrot HUD.
Extend the help overlay with explanations for the diagnostic metrics.